# Hyscode

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: agert_harness.instructions.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsc_output.txt  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/windows/: hyscode.iss
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_extensions.sql  003_fix_mode_constraint.sql  004_traces_and_policies.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  claude_agent.rs  db.rs  devices.rs  docker.rs  extension.rs  fs.rs  git.rs  github_oauth.rs  github_pr.rs  keychain.rs  lsp.rs  mod.rs  pty.rs  updater.rs  utils.rs
docs/: EXTENSION_GUIDE.md  MILESTONES.md  TASKS.md
docs/architecture/: AGENT_HARNESS.md  AI_PROVIDERS.md  DATABASE.md  FRONTEND.md  MCP.md  OVERVIEW.md  SKILLS.md  TAURI.md
docs/specs/: AGENT_SPEC.md  EDITOR_SPEC.md  MVP_SPEC.md  TOOLS_SPEC.md  UI_UX_SPEC.md
extensions/angular-support/: extension.json  language-configuration-template.json  main.js
extensions/catppuccin/: extension.json
extensions/code-runner/: extension.json  main.js
scripts/: CHANGELOG.md  build-linux.sh  build-macos.sh  build-windows.ps1  build.ps1  build.sh  sync-extensions.ps1
(+268 files in other folders)
