[package]
name = "hyscode"
version = "0.2.1-build.25"
edition = "2021"
description = "An agentic code IDE"

[lib]
name = "hyscode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
git2 = "0.19"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
futures-util = "0.3"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
regex = "1"
zip = "2"
semver = "1"
